feat: Alterando contrato do sistema
